Fixed the behavior of the host-private-username. Adjusted the z-index of the alert message box

--- a/client/css/home.css
+++ b/client/css/home.css
@@ -17,7 +17,7 @@
   top: 50%;
   left: 50%;
   margin: -100px 0 0 -150px;
-  z-index: 99;
+  z-index: 9999999;
 }
 
 .curr-player{
